Revert "Merge pull request #14 from pkanduri1/feat/batch-performance-tuning"
This reverts commit 0caf29f75c4aa834222c7513cb63b77da776278f, reversing
changes made to cfaae2866f5b996932107eda7aaeb2f643e6b6bc.